--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     _blank">food website visit now</a>
                 </div>
             </div>
-            <p class="Portfolio-color">I created a travel website which is
+            <p class="Portfolio-color">I created a food website which is
                 quite simple, attractive and fully
                 responsive and also a browser
                 friendly. In this website I created
